package com.yohanesz.Model;

/**
 * o enum optionLanguage é utilizado para o utilizador selecionar a linguagem que será utilizada
 */
public enum optionLanguage {

    JAVA,
    PYTHON
    
}